increase z-index so toolbar hides fixed-columns when scrolling

--- a/src/extensions/sticky-toolbar/bootstrap-table-sticky-toolbar.scss
+++ b/src/extensions/sticky-toolbar/bootstrap-table-sticky-toolbar.scss
@@ -6,5 +6,5 @@
 .fix-sticky-toolbar {
   position: fixed !important;
   overflow: hidden;
-  z-index: 100;
+  z-index: 102;
 }
